Add 'Save Pattern' menu item
This is distinct from the existing 'Save Pattern As' menu item.

--- a/data/cabasa.glade
+++ b/data/cabasa.glade
@@ -285,6 +285,14 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
+                      <object class="GtkMenuItem" id="savePattern">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Save Pattern</property>
+                        <property name="use_underline">True</property>
+                      </object>
+                    </child>
+                    <child>
                       <object class="GtkMenuItem" id="savePatternAs">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
