Add 'Save Rule' menu item
This is distinct from the existing 'Save Rule As' menu item.

--- a/data/cabasa.glade
+++ b/data/cabasa.glade
@@ -136,6 +136,14 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
+                      <object class="GtkMenuItem" id="saveRule">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Save</property>
+                        <property name="use_underline">True</property>
+                      </object>
+                    </child>
+                    <child>
                       <object class="GtkMenuItem" id="saveRuleAs">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
