Add 'clear selection' menu item

--- a/data/cabasa.glade
+++ b/data/cabasa.glade
@@ -438,6 +438,15 @@
                       </object>
                     </child>
                     <child>
+                      <object class="GtkMenuItem" id="clearSelection">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Clear selection</property>
+                        <property name="use_underline">True</property>
+                        <accelerator key="k" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                      </object>
+                    </child>
+                    <child>
                       <object class="GtkMenuItem">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
