Add 'cut' menu item

--- a/data/cabasa.glade
+++ b/data/cabasa.glade
@@ -358,6 +358,15 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
+                      <object class="GtkMenuItem" id="cutCanvas">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Cut</property>
+                        <property name="use_underline">True</property>
+                        <accelerator key="x" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                      </object>
+                    </child>
+                    <child>
                       <object class="GtkMenuItem" id="copyCanvas">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
